refactor: Extend loadConfig pattern to more spells