@@ -8,6 +8,8 @@ import nl.wantedchef.empirewand.spell.Spell;
 import nl.wantedchef.empirewand.spell.SpellContext;
 import nl.wantedchef.empirewand.spell.SpellType;
 import java.util.List;
+import java.util.Objects;
+import java.util.stream.Collectors;
 import net.kyori.adventure.text.Component;
 import org.bukkit.Particle;
 import org.bukkit.Sound;
@@ -17,11 +19,84 @@ import org.bukkit.potion.PotionEffect;
 import org.bukkit.potion.PotionEffectType;
 import org.bukkit.scheduler.BukkitRunnable;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
+/**
+ * A dark spell that channels a destructive ritual damaging and weakening nearby enemies.
+ * <p>
+ * This spell requires the caster to channel for a period of time, during which a circle
+ * of soul particles appears around them. Upon completion, it damages and applies weakness
+ * effects to all entities within the ritual's radius.
+ * <p>
+ * <strong>Features:</strong>
+ * <ul>
+ *   <li>Channeling requirement with visual feedback</li>
+ *   <li>Area of effect damage within specified radius</li>
+ *   <li>Weakness potion effect application</li>
+ *   <li>Dutch display name ("Ritueel van Ontering")</li>
+ *   <li>Configurable damage, duration, and targeting options</li>
+ * </ul>
+ *
+ * <p>
+ * <strong>Usage Example:</strong>
+ * <pre>{@code
+ * Spell ritual = new RitualOfUnmaking.Builder(api)
+ *     .name("Ritual of Unmaking")
+ *     .description("Channels a destructive ritual that damages and weakens nearby enemies.")
+ *     .cooldown(Duration.ofSeconds(40))
+ *     .build();
+ * }</pre>
+ *
+ * @since 1.0.0
+ */
 public class RitualOfUnmaking extends Spell<Void> {
 
+    /**
+     * Configuration class for the RitualOfUnmaking spell.
+     * <p>
+     * This class holds all configurable values for the spell, providing a clean
+     * way to manage spell parameters.
+     */
+    private static class Config {
+        private final int channelTicks;
+        private final double radius;
+        private final double damage;
+        private final int weaknessDuration;
+        private final int weaknessAmplifier;
+        private final boolean hitPlayers;
+        private final boolean hitMobs;
+
+        /**
+         * Creates a new Config instance from a readable config.
+         *
+         * @param config the readable configuration
+         * @throws NullPointerException if config is null
+         */
+        public Config(@NotNull ReadableConfig config) {
+            Objects.requireNonNull(config, "Config cannot be null");
+            this.channelTicks = config.getInt("values.channel-ticks", 40);
+            this.radius = config.getDouble("values.radius", 6.0);
+            this.damage = config.getDouble("values.damage", 8.0);
+            this.weaknessDuration = config.getInt("values.weakness-duration-ticks", 120);
+            this.weaknessAmplifier = config.getInt("values.weakness-amplifier", 0);
+            this.hitPlayers = config.getBoolean("flags.hit-players", true);
+            this.hitMobs = config.getBoolean("flags.hit-mobs", true);
+        }
+    }
+
+    /**
+     * Builder for creating RitualOfUnmaking spell instances.
+     * <p>
+     * Provides a fluent API for configuring the ritual of unmaking spell with sensible defaults.
+     */
     public static class Builder extends Spell.Builder<Void> {
-        public Builder(EmpireWandAPI api) {
+        /**
+         * Creates a new RitualOfUnmaking spell builder.
+         *
+         * @param api the EmpireWandAPI instance
+         * @throws NullPointerException if api is null
+         */
+        public Builder(@NotNull EmpireWandAPI api) {
             super(api);
             this.name = "Ritual of Unmaking";
             this.description = "Channels a destructive ritual that damages and weakens nearby enemies.";
@@ -29,6 +104,11 @@ public class RitualOfUnmaking extends Spell<Void> {
             this.spellType = SpellType.DARK;
         }
 
+        /**
+         * Builds and returns a new RitualOfUnmaking spell instance.
+         *
+         * @return the constructed RitualOfUnmaking spell
+         */
         @Override
         @NotNull
         public Spell<Void> build() {
@@ -38,12 +118,26 @@ public class RitualOfUnmaking extends Spell<Void> {
 
     private Config config;
 
-    private RitualOfUnmaking(Builder builder) {
+    /**
+     * Constructs a new RitualOfUnmaking spell instance.
+     *
+     * @param builder the builder containing spell configuration
+     * @throws NullPointerException if builder is null
+     */
+    private RitualOfUnmaking(@NotNull Builder builder) {
         super(builder);
         // Config will be initialized lazily when first accessed
     }
 
-    private Config getConfig() {
+    /**
+     * Gets the spell configuration, initializing it if necessary.
+     * <p>
+     * This method lazily initializes the configuration from the spell config file
+     * with sensible defaults if values are missing.
+     *
+     * @return the spell configuration
+     */
+    private @NotNull Config getConfig() {
         if (config == null) {
             // This will be called after loadConfig has been called
             config = new Config(spellConfig);
@@ -51,37 +145,89 @@ public class RitualOfUnmaking extends Spell<Void> {
         return config;
     }
 
+    /**
+     * Returns the unique key for this spell.
+     * <p>
+     * This key is used for configuration, identification, and event handling.
+     *
+     * @return the spell key "ritual-of-unmaking"
+     */
     @Override
+    @NotNull
     public String key() {
         return "ritual-of-unmaking";
     }
 
+    /**
+     * Returns the display name for this spell.
+     * <p>
+     * This spell uses a Dutch display name: "Ritueel van Ontering".
+     *
+     * @return the Dutch display name component
+     */
     @Override
+    @NotNull
     public Component displayName() {
         return Component.text("Ritueel van Ontering");
     }
 
+    /**
+     * Returns the prerequisites for casting this spell.
+     * <p>
+     * Currently, this spell has no prerequisites beyond standard casting requirements.
+     *
+     * @return a no-op prerequisite
+     */
     @Override
+    @NotNull
     public PrereqInterface prereq() {
         return new PrereqInterface.NonePrereq();
     }
 
+    /**
+     * Executes the ritual of unmaking spell logic.
+     * <p>
+     * This method starts a channeling task that creates visual effects around the caster
+     * and applies damage and weakness effects to nearby entities upon completion.
+     *
+     * @param context the spell context containing caster and target information
+     * @return null (this spell produces no effect object)
+     */
     @Override
-    protected Void executeSpell(SpellContext context) {
+    @Nullable
+    protected Void executeSpell(@NotNull SpellContext context) {
+        Objects.requireNonNull(context, "Context cannot be null");
+        
         Player player = context.caster();
 
-        new ChannelTask(context, player, getConfig().channelTicks, getConfig().radius, getConfig().damage,
-                getConfig().weaknessDuration,
-                getConfig().weaknessAmplifier, getConfig().hitPlayers, getConfig().hitMobs)
-                .runTaskTimer(context.plugin(), 0L, 1L);
+        context.plugin().getTaskManager().runTaskTimer(
+            new ChannelTask(context, player, getConfig().channelTicks, getConfig().radius, getConfig().damage,
+                    getConfig().weaknessDuration,
+                    getConfig().weaknessAmplifier, getConfig().hitPlayers, getConfig().hitMobs),
+            0L, 1L
+        );
         return null;
     }
 
+    /**
+     * Handles the spell effect after execution.
+     * <p>
+     * This spell's effects are handled asynchronously through BukkitRunnables.
+     *
+     * @param context the spell context
+     * @param result the result of the spell execution (always null for this spell)
+     */
     @Override
     protected void handleEffect(@NotNull SpellContext context, @NotNull Void result) {
         // Effects are handled in the scheduler.
     }
 
+    /**
+     * A runnable that handles the channeling process for the ritual.
+     * <p>
+     * This task creates visual effects around the caster during channeling and
+     * applies the ritual's effects upon completion.
+     */
     private class ChannelTask extends BukkitRunnable {
         private final SpellContext context;
         private final Player player;
@@ -94,10 +240,23 @@ public class RitualOfUnmaking extends Spell<Void> {
         private final boolean hitMobs;
         private int ticksPassed = 0;
 
-        public ChannelTask(SpellContext context, Player player, int channelTicks, double radius, double damage,
+        /**
+         * Creates a new ChannelTask instance.
+         *
+         * @param context the spell context
+         * @param player the player casting the spell
+         * @param channelTicks the number of ticks to channel
+         * @param radius the radius of effect
+         * @param damage the damage to apply
+         * @param weaknessDuration the duration of weakness effect in ticks
+         * @param weaknessAmplifier the amplifier for weakness effect
+         * @param hitPlayers whether to affect players
+         * @param hitMobs whether to affect mobs
+         */
+        public ChannelTask(@NotNull SpellContext context, @NotNull Player player, int channelTicks, double radius, double damage,
                 int weaknessDuration, int weaknessAmplifier, boolean hitPlayers, boolean hitMobs) {
-            this.context = context;
-            this.player = player;
+            this.context = Objects.requireNonNull(context, "Context cannot be null");
+            this.player = Objects.requireNonNull(player, "Player cannot be null");
             this.channelTicks = channelTicks;
             this.radius = radius;
             this.damage = damage;
@@ -107,6 +266,9 @@ public class RitualOfUnmaking extends Spell<Void> {
             this.hitMobs = hitMobs;
         }
 
+        /**
+         * Runs the channeling task, creating visual effects and checking for interruption.
+         */
         @Override
         public void run() {
             if (!player.isValid() || player.isDead() || (player.getLastDamage() > 0 && ticksPassed > 0)) {
@@ -124,59 +286,73 @@ public class RitualOfUnmaking extends Spell<Void> {
             }
         }
 
+        /**
+         * Applies the ritual's effects to nearby entities upon completion.
+         */
         private void onFinish() {
-            List<LivingEntity> targets = player.getWorld().getLivingEntities().stream()
+            var world = player.getWorld();
+            if (world == null) {
+                return;
+            }
+            
+            List<LivingEntity> targets = world.getLivingEntities().stream()
                     .filter(entity -> entity.getLocation() != null && entity.getLocation().distance(player.getLocation()) <= radius)
                     .filter(entity -> !entity.equals(player))
                     .filter(entity -> (entity instanceof Player && hitPlayers)
                             || (!(entity instanceof Player) && hitMobs))
-                    .toList();
+                    .collect(Collectors.toList());
 
             for (LivingEntity target : targets) {
-                target.damage(damage, player);
-                target.addPotionEffect(
-                        new PotionEffect(PotionEffectType.WEAKNESS, weaknessDuration, weaknessAmplifier));
+                if (target.isValid() && !target.isDead()) {
+                    target.damage(damage, player);
+                    target.addPotionEffect(
+                            new PotionEffect(PotionEffectType.WEAKNESS, weaknessDuration, weaknessAmplifier));
+                }
             }
 
             context.fx().playSound(player, Sound.ENTITY_WITHER_AMBIENT, 1.0f, 0.5f);
             spawnBurstParticles(player, radius);
         }
 
-        private void spawnCircleParticles(Player player, double radius) {
+        /**
+         * Spawns circle particles around the player during channeling.
+         *
+         * @param player the player casting the spell
+         * @param radius the radius of the circle
+         */
+        private void spawnCircleParticles(@NotNull Player player, double radius) {
+            Objects.requireNonNull(player, "Player cannot be null");
+            var world = player.getWorld();
+            if (world == null) {
+                return;
+            }
+            
             for (int i = 0; i < 36; i++) {
                 double angle = 2 * Math.PI * i / 36;
                 double x = radius * Math.cos(angle);
                 double z = radius * Math.sin(angle);
-                player.getWorld().spawnParticle(Particle.SOUL, player.getLocation().add(x, 0.1, z), 1, 0, 0, 0, 0);
+                world.spawnParticle(Particle.SOUL, player.getLocation().add(x, 0.1, z), 1, 0, 0, 0, 0);
             }
         }
 
-        private void spawnBurstParticles(Player player, double radius) {
+        /**
+         * Spawns burst particles around the player upon ritual completion.
+         *
+         * @param player the player casting the spell
+         * @param radius the radius of the burst
+         */
+        private void spawnBurstParticles(@NotNull Player player, double radius) {
+            Objects.requireNonNull(player, "Player cannot be null");
+            var world = player.getWorld();
+            if (world == null) {
+                return;
+            }
+            
             for (int i = 0; i < 50; i++) {
                 double x = (Math.random() - 0.5) * radius * 2;
                 double z = (Math.random() - 0.5) * radius * 2;
-                player.getWorld().spawnParticle(Particle.SMOKE, player.getLocation().add(x, 1, z), 1, 0, 0, 0, 0.1);
+                world.spawnParticle(Particle.SMOKE, player.getLocation().add(x, 1, z), 1, 0, 0, 0, 0.1);
             }
-        }
-    }
-
-    private static class Config {
-        private final int channelTicks;
-        private final double radius;
-        private final double damage;
-        private final int weaknessDuration;
-        private final int weaknessAmplifier;
-        private final boolean hitPlayers;
-        private final boolean hitMobs;
-
-        public Config(ReadableConfig config) {
-            this.channelTicks = config.getInt("values.channel-ticks", 40);
-            this.radius = config.getDouble("values.radius", 6.0);
-            this.damage = config.getDouble("values.damage", 8.0);
-            this.weaknessDuration = config.getInt("values.weakness-duration-ticks", 120);
-            this.weaknessAmplifier = config.getInt("values.weakness-amplifier", 0);
-            this.hitPlayers = config.getBoolean("flags.hit-players", true);
-            this.hitMobs = config.getBoolean("flags.hit-mobs", true);
         }
     }
 }
